--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -1289,7 +1289,7 @@
                                 fechaPasado = fechaEnviada.isBefore(fechaActual);
                             }
 
-                            if (tipoVenta == "Reaplicación" || tipoVenta == "Venta Spot" || tipoVenta == "Factory Assist") {
+                            if (tipoVenta == "Reaplicación" || tipoVenta == "Venta Spot" || tipoVenta == "Factory Assist" || tipoVenta == "Pre-serie") {
                                 //  si fecha valida
                                 if (fechaValida) {
                                     callback(true)
@@ -1300,7 +1300,7 @@
                                     //    callback(false)
                                     //}
                                 } else {
-                                    toastMixin.fire({ title: 'El campo Fecha de Validez es obligatorio en Reaplicación, Venta Spot y Factory Assist', icon: 'warning' });
+                                    toastMixin.fire({ title: 'El campo Fecha de Validez es obligatorio en Reaplicación, Venta Spot, Factory Assist y Pre-serie.', icon: 'warning' });
                                     callback(false)
                                 }
                             } else {
