2025-08-26 SCDM: Se corrige Others en clientes automotriz.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -1418,7 +1418,7 @@
                              }
 
                              // 3) Si no es “Otros” ya está cubierto
-                             if (value !== 'Otros') {
+                             if (value !== 'Others' && value !== 'Otros') {
                                  return cb(true);
                              }
 
