--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
@@ -1409,7 +1409,7 @@
                             }
 
                             // 3) Si no es “Otros” ya está cubierto
-                            if (value !== 'Otros') {
+                            if (value !== 'Others' && value !== 'Otros') {
                                 return cb(true);
                             }
 
